admission/ValidatingAdmissionPolicy/policies/startupprobe-tcpsocket-host/initcontainers/deny.yaml
apiVersion: v1
kind: Pod
metadata:
  name: startupprobe-tcpsocket-host-initcontainers
  annotations:
    kubeapt.io/uuid: "b45fe463-3d31-457e-9ad3-850462f795ff"
spec:
  containers:
  - name: main
    image: busybox:1.36
    command:
    - sh
    - -c
    - sleep 3600
